clusters/homelab/apps/ext-blog-klimlive/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blog-klimlive
  namespace: ext-blog-klimlive
spec:
  type: ClusterIP
  selector:
    app: blog-klimlive
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: blog-klimlive-monitoring
  namespace: ext-blog-klimlive
spec:
  type: ClusterIP
  selector:
    app: blog-klimlive
  ports:
    - name: http-metrics
      port: 2000
      protocol: TCP
      targetPort: 2000
